isitio-fleetman/gateway/vs-match.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webapp-vs
  namespace: default
spec:
  gateways:
    - ingress-gateway
  hosts:
    - "*"
  http:
    - match:
      - uri:
          prefix: /experimental
      route:
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: experimental
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: 
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: webapp-dr
  namespace: default
spec:
  host: fleetman-webapp.default.svc.cluster.local
  subsets:
    - name: original
      labels:
        version: original
    - name: experimental
      labels:
        version: experimental
